# studypulse

./: .env.example  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  studypulse-product.html  studypulse-prototype.html  tailwind.config.js  tsconfig.json  tsconfig.node.json
docs/: studypulse_user_manual_cn.txt
scripts/: check_studypulse_docs.py  create_improvement_doc.py  create_latest_usage_report.py  create_studypulse_docs.py  package_windows_release.ps1
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  ai.rs  collector.rs  db.rs  main.rs  pomodoro.rs
src/components/: SettingsModal.test.tsx  SettingsModal.tsx  StatCard.tsx
src/lib/: api.ts  types.ts
